# natal

./: .cursorrules  .gitignore  404.html  AGENTS.md  README.md  astro.py  astrobro.fig  chart-design.ipynb  config.schema.json  config.toml  demo.ipynb  enum.ipynb  index.html  mkdocs.yml  natal.yml  natal_config.yml  objects.inv  preprocess_cities.ipynb  pyproject.toml  sample_natal_config.yml  sitemap.xml  structure.md  todo.md
.github/workflows/: ci.yml
chart/: index.html
classes/: index.html
config/: index.html
const/: index.html
data/: index.html
docs/: chart.md  classes.md  config.md  const.md  data.md  entities.md  enums.md  natal.md  natal_data.md  ref.md  report.md  stats.md  utils.md
docs/stylesheets/: extra.css
entities/: index.html
enums/: index.html
license/: index.html
natal/: __init__.py  ai.py  aspect.py  chart.py  classes.py  config.py  const.py  data.py  entities.py  entity.py  enums.py  house.py  index.html  natal_data.py  pdf.py  position.py  report.css  report.py  rewrite.md  stats.py  utils.py
natal/data/: cities.csv  const.csv  const.yml  entities.csv  natal_schema.json
natal/svg_paths/: clean_up.py
natal_data/: index.html
ref/: index.html
report/: index.html
search/: search_index.json
stats/: index.html
tests/: __init__.py  test_ai.py  test_chart.py  test_config.py  test_const.py  test_data.py  test_entity.py  test_report.py  test_stats.py  test_utils.py
utils/: index.html
