[project]
name = "natal"
version = "1.0.1"
description = "create Natal Chart with ease"
license = { text = "MIT" }
authors = [{ name = "Kelvin Ng", email = "hoishing@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic", "pyswisseph", "tabulate", "tagit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "ipykernel", "scour"]

[tool.ruff]
isort.no-sections = true
line-length = 100
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]
