[project]
name = "natal"
version = "0.9.5"
description = "create Natal Chart with ease"
license = { text = "MIT" }
authors = [{ name = "Kelvin Ng", email = "hoishing@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
urls = { "Repository" = "https://github.com/hoishing/natal", "Documentation" = "https://hoishing.github.io/natal" }
dependencies = [
    "pydantic>=2.8.2",
    "pyswisseph>=2.10.3.2",
    "tabulate>=0.9.0",
    "tagit>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.ruff]
isort.no-sections = true
line-length = 100
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]
